# ftdi

./: bitmap.py  epaper_spi.py  find_ft232h.py  goit_ds_hw04.ipynb  i2cscan.py  lab.py  lcd_i2c.py  lcdlab.py  main.py  pyproject.toml  raspberry_copy.bat  scan_lcd.py
