[tool.poetry]
name = "ftdi"
version = "0.1.0"
description = ""
authors = ["ntnkiev <ntn.kiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyusb = "1.0.0"
pyserial = "^3.5"
pyftdi = "^0.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
